fix: increase the width and spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     color: hsl(223, 47%, 23%);
 }
 .attribution { 
-    width: 300px;
+    width: 350px;
     height: auto;
     border-radius: 7px;
     font-size: 16px;
